! Watch NS bh-in-31.webhostbox.net

--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -928,6 +928,7 @@ items:
 - ns: bh-ht-11.webhostbox.net.
 - ns: bh-ht-7.webhostbox.net.
 - ns: bh-in-10.webhostbox.net.
+- ns: bh-in-31.webhostbox.net.
 - ns: bh-in-33.webhostbox.net.
 - ns: bigrock.in.
 - ns: exweme.com.
