--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -927,6 +927,7 @@ items:
 - ns: stackdns.com.
 - ns: permainanceme.online.
 - ns: resourcesofnet.net.
+- ns: bh-63.webhostbox.net.
 - ns: bh-ht-10.webhostbox.net.
 - ns: bh-ht-11.webhostbox.net.
 - ns: bh-ht-7.webhostbox.net.
