--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -474,6 +474,9 @@ items:
   - jean.ns.cloudflare.com.
   - piotr.ns.cloudflare.com.
 - ns:
+  - jeff.ns.cloudflare.com.
+  - venus.ns.cloudflare.com.
+- ns:
   - jeremy.ns.cloudflare.com.
   - katja.ns.cloudflare.com.
 - ns:
