! Watch Cloudflare NS pair Gina+James

--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -394,6 +394,9 @@ items:
   - melissa.ns.cloudflare.com.
 - ns:
   - gina.ns.cloudflare.com.
+  - james.ns.cloudflare.com.
+- ns:
+  - gina.ns.cloudflare.com.
   - rudy.ns.cloudflare.com.
 - ns:
   - glen.ns.cloudflare.com.
