! Watch Cloudflare NS pair Bonnie+Jason

--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -170,6 +170,9 @@ items:
   - guss.ns.cloudflare.com.
 - ns:
   - bonnie.ns.cloudflare.com.
+  - jason.ns.cloudflare.com.
+- ns:
+  - bonnie.ns.cloudflare.com.!
   - tim.ns.cloudflare.com.
 - ns:
   - bonnie.ns.cloudflare.com.
