! Typo fix (sorry!)

--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -172,7 +172,7 @@ items:
   - bonnie.ns.cloudflare.com.
   - jason.ns.cloudflare.com.
 - ns:
-  - bonnie.ns.cloudflare.com.!
+  - bonnie.ns.cloudflare.com.
   - tim.ns.cloudflare.com.
 - ns:
   - bonnie.ns.cloudflare.com.
