--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -627,6 +627,9 @@ items:
   - melissa.ns.cloudflare.com.
   - nash.ns.cloudflare.com.
 - ns:
+  - michelle.ns.cloudflare.com.
+  - rob.ns.cloudflare.com.
+- ns:
   - mira.ns.cloudflare.com.
   - sergi.ns.cloudflare.com.
 - ns:
