--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -378,6 +378,9 @@ items:
   - ernest.ns.cloudflare.com.
   - pat.ns.cloudflare.com.
 - ns:
+  - ernest.ns.cloudflare.com.
+  - sharon.ns.cloudflare.com.
+- ns:
   - eva.ns.cloudflare.com.
   - hank.ns.cloudflare.com.
 - ns:
