--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -955,6 +955,7 @@ items:
 - ns: permainanceme.online.
 - ns: resourcesofnet.net.
 - ns: bh-63.webhostbox.net.
+- ns: bh-74.webhostbox.net.
 - ns: bh-ht-10.webhostbox.net.
 - ns: bh-ht-11.webhostbox.net.
 - ns: bh-ht-7.webhostbox.net.
