! Watch Cloudflare NS pair Adelaide+Arvind

--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -34,6 +34,9 @@ items:
   - adelaide.ns.cloudflare.com.
   - aldo.ns.cloudflare.com.
 - ns:
+  - adelaide.ns.cloudflare.com.
+  - arvind.ns.cloudflare.com.
+- ns:
   - adi.ns.cloudflare.com.
   - miles.ns.cloudflare.com.
 - ns:
