--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,7 @@ jobs:
       - run:
           name: install python dependencies in venv
           command: |
+            ssh-keyscan github.com >> ~/.ssh/known_hosts
             python3 -m venv env
             env/bin/pip3 install -r requirements.txt --upgrade
             env/bin/pip3 install -r user_requirements.txt --upgrade
