Upgrade Flake8 to 3.8, fix new complaints

--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,7 @@
 # Here's a good reference: https://lintlyci.github.io/Flake8Rules/
 ignore =
     E402,  # Module-level import not at top
+    E741,  # Ambiguous variable name (lowercase L)
     F401,  # Imported but unused
     F403,  # from import *
     F405,  # Same as above
