--- a/blacklisted_nses.yml
+++ b/blacklisted_nses.yml
@@ -29,6 +29,9 @@ items:
   - chip.ns.cloudflare.com.
   - lola.ns.cloudflare.com.
 - ns:
+  - clark.ns.cloudflare.com.
+  - kiki.ns.cloudflare.com.
+- ns:
   - elliot.ns.cloudflare.com.
   - sue.ns.cloudflare.com.
 - ns:
