! Watch Cloudflare NS pair Cleo+Leah

--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -262,6 +262,9 @@ items:
   - chuck.ns.cloudflare.com.
   - vida.ns.cloudflare.com.
 - ns:
+  - cleo.ns.cloudflare.com.
+  - leah.ns.cloudflare.com.
+- ns:
   - coco.ns.cloudflare.com.
   - duke.ns.cloudflare.com.
 - ns:
