--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -226,6 +226,9 @@ items:
   - bruce.ns.cloudflare.com.
   - mira.ns.cloudflare.com.
 - ns:
+  - buck.ns.cloudflare.com.
+  - lorna.ns.cloudflare.com.
+- ns:
   - burt.ns.cloudflare.com.
   - lola.ns.cloudflare.com.
 - ns:
