! Watch Cloudflare NS pair Merlin+Rafe

--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -657,6 +657,9 @@ items:
   - melissa.ns.cloudflare.com.
   - nash.ns.cloudflare.com.
 - ns:
+  - merlin.ns.cloudflare.com.
+  - rafe.ns.cloudflare.com.
+- ns:
   - michelle.ns.cloudflare.com.
   - rob.ns.cloudflare.com.
 - ns:
