! Watch Cloudflare NS pair Karl+Katja

--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -544,6 +544,9 @@ items:
   - phil.ns.cloudflare.com.
 - ns:
   - karl.ns.cloudflare.com.
+  - katja.ns.cloudflare.com.
+- ns:
+  - karl.ns.cloudflare.com.
   - uma.ns.cloudflare.com.
 - ns:
   - kay.ns.cloudflare.com.
