! Watch Cloudflare NS pair Bob+Dee

--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -176,6 +176,9 @@ items:
   - ken.ns.cloudflare.com.
 - ns:
   - bob.ns.cloudflare.com.
+  - dee.ns.cloudflare.com.
+- ns:
+  - bob.ns.cloudflare.com.
   - rose.ns.cloudflare.com.
 - ns:
   - bonnie.ns.cloudflare.com.
