--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -347,6 +347,9 @@ items:
   - malcolm.ns.cloudflare.com.
 - ns:
   - dee.ns.cloudflare.com.
+  - evan.ns.cloudflare.com.
+- ns:
+  - dee.ns.cloudflare.com.
   - graham.ns.cloudflare.com.
 - ns:
   - desi.ns.cloudflare.com.
