--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -582,6 +582,9 @@ items:
   - keanu.ns.cloudflare.com.
   - perla.ns.cloudflare.com.
 - ns:
+  - kenneth.ns.cloudflare.com.
+  - ulla.ns.cloudflare.com.
+- ns:
   - kia.ns.cloudflare.com.
   - kip.ns.cloudflare.com.
 - ns:
