--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -567,6 +567,9 @@ items:
   - jose.ns.cloudflare.com.
   - rafe.ns.cloudflare.com.
 - ns:
+  - june.ns.cloudflare.com.
+  - scott.ns.cloudflare.com.
+- ns:
   - justin.ns.cloudflare.com.
   - vita.ns.cloudflare.com.
 - ns:
