--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -172,6 +172,9 @@ items:
   - ben.ns.cloudflare.com.
   - kami.ns.cloudflare.com.
 - ns:
+  - beth.ns.cloudflare.com.
+  - dale.ns.cloudflare.com.
+- ns:
   - betty.ns.cloudflare.com.
   - kai.ns.cloudflare.com.
 - ns:
