--- a/rooms.yml
+++ b/rooms.yml
@@ -162,6 +162,7 @@ stackexchange.com:
       - 1599858  # luuklag
       - 1280398  # Rubiksmoose
       - 17876926 # user12986714
+      - 18017074 # Ian Campbell
 
   65945:  # Charcoal Test
     commands: true
