--- a/rooms.yml
+++ b/rooms.yml
@@ -163,6 +163,7 @@ stackexchange.com:
       - 1280398  # Rubiksmoose
       - 17876926 # user12986714
       - 18017074 # Ian Campbell
+      - 72095    # Ryan M
 
   65945:  # Charcoal Test
     commands: true
