--- a/blacklisted_nses.yml
+++ b/blacklisted_nses.yml
@@ -77,3 +77,6 @@ items:
 - ns: my-wifiextnet.net.
 - ns: doodledigital.net.
 - ns: ocpdns.com.
+- ns:
+  - dns1.namecheaphosting.com
+  - dns2.namecheaphosting.com
