--- a/blacklisted_nses.yml
+++ b/blacklisted_nses.yml
@@ -78,5 +78,5 @@ items:
 - ns: doodledigital.net.
 - ns: ocpdns.com.
 - ns:
-  - dns1.namecheaphosting.com
-  - dns2.namecheaphosting.com
+  - dns1.namecheaphosting.com.
+  - dns2.namecheaphosting.com.
