--- a/rooms.yml
+++ b/rooms.yml
@@ -342,11 +342,18 @@ stackexchange.com:
         room: 11540
         
   109836:  # Chat Restricted
-    commands: false
+    commands: true
     msg_types:
         - site-gaming.stackexchange.com
         - site-gaming.meta.stackexchange.com
+        - experimental-site-gaming.stackexchange.com
+        - experimental-site-gaming.meta.stackexchange.com
         - offensive-mask  
+
+    privileges:
+      inherit:
+        site: stackexchange.com
+        room: 11540
 
 meta.stackexchange.com:
   89:  # Tavern on the Meta
