--- a/rooms.yml
+++ b/rooms.yml
@@ -263,7 +263,7 @@ stackexchange.com:
     msg_types:
       - site-scifi.stackexchange.com
       - offensive-mask
-      
+
   58631:  # The Restaurant at the End of the Universe
     commands: true
     watcher: true
@@ -283,7 +283,7 @@ stackexchange.com:
     msg_types:
       - site-japanese.stackexchange.com
       - offensive-mask
-      
+
   84778:  # The Terminal
     commands: true
     msg_types:
@@ -306,7 +306,7 @@ stackexchange.com:
       - site-es.stackoverflow.com
       - delay
       - offensive-mask
-      
+
   27:  # Stack Apps
     commands: false
     watcher: false
@@ -340,7 +340,7 @@ stackexchange.com:
       inherit:
         site: stackexchange.com
         room: 11540
-        
+
   109836:  # Chat Restricted
     commands: true
     msg_types:
@@ -348,12 +348,22 @@ stackexchange.com:
         - site-gaming.meta.stackexchange.com
         - experimental-site-gaming.stackexchange.com
         - experimental-site-gaming.meta.stackexchange.com
-        - offensive-mask  
+        - offensive-mask
 
     privileges:
       inherit:
         site: stackexchange.com
         room: 11540
+
+  109841:  # Smoke Detector Reports
+    commands: true
+    msg_types:
+        - site-travel.stackexchange.com
+        - site-travel.meta.stackexchange.com
+        - experimental-site-travel.stackexchange.com
+        - experimental-site-travel.meta.stackexchange.com
+        - no-offensive-mask
+
 
 meta.stackexchange.com:
   89:  # Tavern on the Meta
@@ -418,12 +428,12 @@ meta.stackexchange.com:
 
   1181:
     commands: true
-    
+
     msg_types:
       - all-sites
       - experimental-all-sites
       - offensive-mask
-    
+
     privileges:
       - 6109921  # quartata
       - 1245478  # CalvT
@@ -582,14 +592,14 @@ stackoverflow.com:
       - 15776767 # Das_Geek
       - 2063361  # Dharman
       # NOTICE: please don't add new users until you have Room Owner approval. Art is an RO.
-      
+
   167826:
     commands: true
-    
+
     msg_types:
       - site-stackoverflow.com
       - offensive-mask
-      
+
     privileges:
       - 270038   # Floern
       - 1936546  # Tunaki
@@ -630,4 +640,4 @@ stackoverflow.com:
     privileges:
       inherit:
         site: stackexchange.com
-        room: 11540 
+        room: 11540
