--- a/rooms.yml
+++ b/rooms.yml
@@ -156,7 +156,7 @@ stackexchange.com:
       - 4146267  # robsiemb
       - 2063361  # Dharman
       - 2193756  # Justin Krejcha (jkrejcha)
-      - 17078244 # Daniil Manokhin
+      - 17078244 # Daniil
       - 8629256  # M--
       - 15062967 # Adrian Mole
       - 1599858  # luuklag
