Add Ryan M to SOCVR -autopull

--- a/rooms.yml
+++ b/rooms.yml
@@ -551,6 +551,7 @@ stackoverflow.com:
       - 2477436  # gparyani
       - 8629256  # M--
       - 15062967 # Adrian Mole
+      - 72095    # Ryan M
       # NOTICE: please don't add new users until you have Room Owner approval
 
   111347:  # SOBotics
