Add experimental and AU meta by request
Add experimental and AU meta by request: https://chat.stackexchange.com/transcript/message/54784272#54784272

--- a/rooms.yml
+++ b/rooms.yml
@@ -183,6 +183,9 @@ stackexchange.com:
     watcher: true
     msg_types:
       - site-askubuntu.com
+      - site-site-askubuntu.com
+      - experimental-site-askubuntu.com
+      - experimental-site-meta.askubuntu.com
       - offensive-mask
 
   2165:  # CRUDE
