--- a/rooms.yml
+++ b/rooms.yml
@@ -183,7 +183,7 @@ stackexchange.com:
     watcher: true
     msg_types:
       - site-askubuntu.com
-      - site-site-askubuntu.com
+      - site-meta.askubuntu.com
       - experimental-site-askubuntu.com
       - experimental-site-meta.askubuntu.com
       - offensive-mask
