! Watch Cloudflare NS pair Marty+Mimi

--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -693,6 +693,9 @@ items:
   - mark.ns.cloudflare.com.
   - wanda.ns.cloudflare.com.
 - ns:
+  - marty.ns.cloudflare.com.
+  - mimi.ns.cloudflare.com.
+- ns:
   - matt.ns.cloudflare.com.
   - nina.ns.cloudflare.com.
 - ns:
