! Watch NS md-in-57.webhostbox.net.

--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -1050,6 +1050,7 @@ items:
 - ns: md-31.webhostbox.net.
 - ns: md-in-20.webhostbox.net.
 - ns: md-in-51.webhostbox.net.
+- ns: md-in-57.webhostbox.net.
 - ns: bigrock.in.
 - ns: exweme.com.
 - ns: ifcondition.com.
