! Typo fix ... sorry!

--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -112,7 +112,7 @@ items:
   - anirban.ns.cloudflare.com.
   - dee.ns.cloudflare.com.
 - ns:
-  - abirban.ns.cloudflare.com.
+  - anirban.ns.cloudflare.com.
   - janet.ns.cloudflare.com.
 - ns:
   - anna.ns.cloudflare.com.
