! Watch Cloudflare NS pair Dee+Lars

--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -361,6 +361,9 @@ items:
   - dee.ns.cloudflare.com.
   - graham.ns.cloudflare.com.
 - ns:
+  - dee.ns.cloudflare.com.
+  - lars.ns.cloudflare.com.
+- ns:
   - desi.ns.cloudflare.com.
   - elmo.ns.cloudflare.com.
 - ns:
