--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -463,6 +463,9 @@ items:
   - james.ns.cloudflare.com.
 - ns:
   - gina.ns.cloudflare.com.
+  - kianchau.ns.cloudflare.com.
+- ns:
+  - gina.ns.cloudflare.com.
   - rudy.ns.cloudflare.com.
 - ns:
   - glen.ns.cloudflare.com.
