--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -67,6 +67,9 @@ items:
   - ajay.ns.cloudflare.com.
   - sima.ns.cloudflare.com.
 - ns:
+  - alaric.ns.cloudflare.com.
+  - aria.ns.cloudflare.com.
+- ns:
   - alex.ns.cloudflare.com.
   - lana.ns.cloudflare.com.
 - ns:
