! Watch NS idhostinger.com

--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -914,6 +914,7 @@ items:
 - ns: turnkeywebspace.com.
 - ns: namedc.com.
 - ns: hostinger.in.
+- ns: idhostinger.com.
 - ns: site5.com.
 - ns: indianshosting.com.
 - ns: zonedns.vn.
