! Watch Cloudflare NS pair Malcolm+Sureena

--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -699,6 +699,9 @@ items:
   - major.ns.cloudflare.com.
   - rosa.ns.cloudflare.com.
 - ns:
+  - malcolm.ns.cloudflare.com.
+  - sureena.ns.cloudflare.com.
+- ns:
   - marge.ns.cloudflare.com.
   - skip.ns.cloudflare.com.
 - ns:
