--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ appdirs>=1.4.3
 beautifulsoup4>=4.6.0
 requests>=2.18.4
 websocket-client>=0.54.0
-coverage<=4.5.1,<5
+coverage>=4.5.1,<5
 pytest>=4.1.0
 phonenumbers>=8.8.11
 flake8~=3.8.0
