Add SD privileges for Spevacus
-autopull

--- a/rooms.yml
+++ b/rooms.yml
@@ -166,6 +166,7 @@ stackexchange.com:
       - 72095    # Ryan M
       - 93089    # doppelgreener
       - 2629084  # Vickel
+      - 15484767 # Spevacus
 
   65945:  # Charcoal Test
     commands: true
