--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
     - uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Setup cache for Bundler
+    - name: Setup cache
       id: cache
       uses: actions/cache@v2
       with:
@@ -31,6 +31,14 @@ jobs:
       run: |
         pip3 install -U wheel pip
         pip3 install -U -r requirements.txt -r user_requirements.txt pytest-cov coveralls
+    - name: Lint tests
+      run: flake8 --config=tox_tests.ini test/
+    - name: Lint classes
+      run: flake8 --config=tox_classes.ini classes/
+    - name: Lint code
+      run: flake8 ./
+    - name: Pytest
+      run: |
         python3 -W default::Warning -m pytest \
           --cov=chatcommunicate \
           --cov=findspam \
@@ -40,14 +48,6 @@ jobs:
           --cov=chatcommands \
           --cov=helpers \
           test
-    - name: Lint tests
-      run: flake8 --config=tox_tests.ini test/
-    - name: Lint classes
-      run: flake8 --config=tox_classes.ini classes/
-    - name: Lint code
-      run: flake8 ./
-    - name: Pytest
-      run: |
     - name: Coveralls
       run: coveralls
       env:
