--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,8 @@ jobs:
           - 3.8
     steps:
     - uses: actions/checkout@v2
+      with:
+        fetch-depth: 5
     - uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
