--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,8 +16,10 @@ jobs:
           - 3.8
     steps:
     - uses: actions/checkout@v2
-      with:
-        fetch-depth: 5
+    - name: Fetch branches
+      run: |
+        git remote set-branches --add origin deploy
+        git fetch --all --depth=5
     - uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
