Add - 999385 # Mast to SD privileges in CHQ -autopull

--- a/rooms.yml
+++ b/rooms.yml
@@ -167,6 +167,7 @@ stackexchange.com:
       - 93089    # doppelgreener
       - 2629084  # Vickel
       - 15484767 # Spevacus
+      - 999385   # Mast
 
   65945:  # Charcoal Test
     commands: true
