! Watch Cloudflare NS pair Hope+Terin

--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -507,6 +507,9 @@ items:
   - hal.ns.cloudflare.com.
   - tegan.ns.cloudflare.com.
 - ns:
+  - hope.ns.cloudflare.com.
+  - terin.ns.cloudflare.com.
+- ns:
   - hugh.ns.cloudflare.com.
   - lina.ns.cloudflare.com.
 - ns:
