--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -556,6 +556,9 @@ items:
   - piotr.ns.cloudflare.com.
 - ns:
   - jeff.ns.cloudflare.com.
+  - pam.ns.cloudflare.com.
+- ns:
+  - jeff.ns.cloudflare.com.
   - venus.ns.cloudflare.com.
 - ns:
   - jeremy.ns.cloudflare.com.
