--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -235,6 +235,9 @@ items:
   - brenda.ns.cloudflare.com.
   - theo.ns.cloudflare.com.
 - ns:
+  - brett.ns.cloudflare.com.
+  - jo.ns.cloudflare.com.
+- ns:
   - brian.ns.cloudflare.com.
   - dalary.ns.cloudflare.com.
 - ns:
