--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -1059,6 +1059,9 @@ items:
 - ns:
   - cns2015.webhostbox.net.
   - cns2016.webhostbox.net.
+- ns:
+  - rns7.webhostbox.net.
+  - rns8.webhostbox.net.
 - ns: bh-63.webhostbox.net.
 - ns: bh-74.webhostbox.net.
 - ns: bh-ht-10.webhostbox.net.
