--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -1060,6 +1060,9 @@ items:
   - cns2015.webhostbox.net.
   - cns2016.webhostbox.net.
 - ns:
+  - rns15.webhostbox.net.
+  - rns16.webhostbox.net.
+- ns:
   - rns7.webhostbox.net.
   - rns8.webhostbox.net.
 - ns: bh-63.webhostbox.net.
