! Watch Cloudflare NS pair Plato+Rafe

--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -780,6 +780,9 @@ items:
   - pablo.ns.cloudflare.com.
   - pola.ns.cloudflare.com.
 - ns:
+  - plato.ns.cloudflare.com.
+  - rafe.ns.cloudflare.com.
+- ns:
   - princess.ns.cloudflare.com.
   - rene.ns.cloudflare.com.
 - ns:
