! Blacklist Cloudflare NS pair Linda+Ned

--- a/blacklisted_nses.yml
+++ b/blacklisted_nses.yml
@@ -50,6 +50,9 @@ items:
   - lee.ns.cloudflare.com.
   - ulla.ns.cloudflare.com.
 - ns:
+  - linda.ns.cloudflare.com.
+  - ned.ns.cloudflare.com.
+- ns:
   - lloyd.ns.cloudflare.com.
   - reza.ns.cloudflare.com.
 - ns:
