! Watch Cloudflare NS pair Barbara+Jack

--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -167,6 +167,9 @@ items:
   - lee.ns.cloudflare.com.
 - ns:
   - barbara.ns.cloudflare.com.
+  - jack.ns.cloudflare.com.
+- ns:
+  - barbara.ns.cloudflare.com.
   - logan.ns.cloudflare.com.
 - ns:
   - beau.ns.cloudflare.com.
