Add Calvin Khor to SmokeDetector privileges in Charcoal HQ -autopull

--- a/rooms.yml
+++ b/rooms.yml
@@ -168,6 +168,7 @@ stackexchange.com:
       - 2629084  # Vickel
       - 15484767 # Spevacus
       - 999385   # Mast
+      - 2848832  # Calvin Khor
 
   65945:  # Charcoal Test
     commands: true
