! Watch Hostgator NS pair ns6423+ns6424

--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -912,6 +912,9 @@ items:
 - ns: lfmserver.com.
 - ns: symbolhostpremiumdns.com.
 - ns: hostgator.in.
+- ns:
+  - ns6423.hostgator.com.
+  - ns6424.hostgator.com.
 - ns: hostspicy.com.
 - ns: ewebguru.com.
 - ns: dnsowl.com.
