! Watch Cloudflare NS pair Ashley+Clyde

--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -161,6 +161,9 @@ items:
   - paul.ns.cloudflare.com.
 - ns:
   - ashley.ns.cloudflare.com.
+  - clyde.ns.cloudflare.com.
+- ns:
+  - ashley.ns.cloudflare.com.
   - lee.ns.cloudflare.com.
 - ns:
   - barbara.ns.cloudflare.com.
