! Watch MS matbao.com

--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -1066,6 +1066,7 @@ items:
 - ns: vdns.vn.
 - ns: ocyber.us.
 - ns: layerip.com.
+- ns: matbao.com.
 - ns: matbao.vn.
 - ns: hostinger.vn.
 - ns: hostnac.com.
