--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -857,6 +857,9 @@ items:
   - ns59.domaincontrol.com.
   - ns60.domaincontrol.com.
 - ns:
+  - ns71.domaincontrol.com.
+  - ns72.domaincontrol.com.
+- ns:
   - ns75.domaincontrol.com.
   - ns76.domaincontrol.com.
 - ns:
