--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -28,6 +28,9 @@ items:
   - addilyn.ns.cloudflare.com.
   - mack.ns.cloudflare.com.
 - ns:
+  - addyson.ns.cloudflare.com.
+  - dale.ns.cloudflare.com.
+- ns:
   - adel.ns.cloudflare.com.
   - max.ns.cloudflare.com.
 - ns:
