--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -29,7 +29,7 @@ items:
   - mack.ns.cloudflare.com.
 - ns:
   - addyson.ns.cloudflare.com.
-  - dale.ns.cloudflare.com.
+  - dane.ns.cloudflare.com.
 - ns:
   - adel.ns.cloudflare.com.
   - max.ns.cloudflare.com.
