! Watch Cloudflare NS pair Leanna+Marek

--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -702,6 +702,9 @@ items:
   - laura.ns.cloudflare.com.
   - terin.ns.cloudflare.com.
 - ns:
+  - leanna.ns.cloudflare.com.
+  - marek.ns.cloudflare.com.
+- ns:
   - lee.ns.cloudflare.com.
   - megan.ns.cloudflare.com.
 - ns:
