! Watch bigrock.com name servers cns1+cns2

--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -1039,6 +1039,9 @@ items:
 - ns:
   - ns1.cp-48.bigrockservers.com.
   - ns2.cp-48.bigrockservers.com.
+- ns:
+  - cns1.bigrock.com.
+  - cns2.bigrock.com.
 - ns: tenten.vn.
 - ns:
   - rush.easydns.com.
