--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -409,6 +409,9 @@ items:
   - dolly.ns.cloudflare.com.
   - logan.ns.cloudflare.com.
 - ns:
+  - dom.ns.cloudflare.com.
+  - rachel.ns.cloudflare.com.
+- ns:
   - dora.ns.cloudflare.com.
   - west.ns.cloudflare.com.
 - ns:
