--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -878,6 +878,9 @@ items:
   - ns71.domaincontrol.com.
   - ns72.domaincontrol.com.
 - ns:
+  - ns73.domaincontrol.com.
+  - ns74.domaincontrol.com.
+- ns:
   - ns75.domaincontrol.com.
   - ns76.domaincontrol.com.
 - ns:
