--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -478,6 +478,9 @@ items:
   - lily.ns.cloudflare.com.
 - ns:
   - fiona.ns.cloudflare.com.
+  - nash.ns.cloudflare.com.
+- ns:
+  - fiona.ns.cloudflare.com.
   - rajeev.ns.cloudflare.com.
 - ns:
   - gail.ns.cloudflare.com.
