! Watch Cloudflare NS pair Iris+Theo

--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -555,6 +555,9 @@ items:
   - ines.ns.cloudflare.com.
   - terin.ns.cloudflare.com.
 - ns:
+  - iris.ns.cloudflare.com.
+  - theo.ns.cloudflare.com.
+- ns:
   - irma.ns.cloudflare.com.
   - rudy.ns.cloudflare.com.
 - ns:
