! Watch Cloudflare NS pair Dean+Wanda

--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -373,6 +373,9 @@ items:
   - dean.ns.cloudflare.com.
   - sofia.ns.cloudflare.com.
 - ns:
+  - dean.ns.cloudflare.com.
+  - wanda.ns.cloudflare.com.
+- ns:
   - deb.ns.cloudflare.com.
   - drew.ns.cloudflare.com.
 - ns:
