--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -595,6 +595,9 @@ items:
   - piotr.ns.cloudflare.com.
 - ns:
   - jeff.ns.cloudflare.com.
+  - maya.ns.cloudflare.com.
+- ns:
+  - jeff.ns.cloudflare.com.
   - pam.ns.cloudflare.com.
 - ns:
   - jeff.ns.cloudflare.com.
