--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -131,6 +131,9 @@ items:
   - tim.ns.cloudflare.com.
 - ns:
   - apollo.ns.cloudflare.com.
+  - karsyn.ns.cloudflare.com.
+- ns:
+  - apollo.ns.cloudflare.com.
   - michelle.ns.cloudflare.com.
 - ns:
   - april.ns.cloudflare.com.
