! Watch NS bh-ht-3.webhostbox.net

--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -1157,6 +1157,7 @@ items:
 - ns: bh-74.webhostbox.net.
 - ns: bh-ht-10.webhostbox.net.
 - ns: bh-ht-11.webhostbox.net.
+- ns: bh-ht-3.webhostbox.net.
 - ns: bh-ht-7.webhostbox.net.
 - ns: bh-in-10.webhostbox.net.
 - ns: bh-in-31.webhostbox.net.
