--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -1144,7 +1144,9 @@ items:
 - ns: stackdns.com.
 - ns: permainanceme.online.
 - ns: resourcesofnet.net.
-- ns:
+- comment: 5/9 over 7 months, all TPs overlap with other rules (2020-08-18)
+  disable: true
+  ns:
   - cns2015.webhostbox.net.
   - cns2016.webhostbox.net.
 - ns:
