--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -914,6 +914,9 @@ items:
   - ns59.domaincontrol.com.
   - ns60.domaincontrol.com.
 - ns:
+  - ns69.domaincontrol.com.
+  - ns70.domaincontrol.com.
+- ns:
   - ns71.domaincontrol.com.
   - ns72.domaincontrol.com.
 - ns:
