! Watch Cloudflare NS pair Chelsea+Jim

--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -287,6 +287,9 @@ items:
   - irma.ns.cloudflare.com.
 - ns:
   - chelsea.ns.cloudflare.com.
+  - jim.ns.cloudflare.com.
+- ns:
+  - chelsea.ns.cloudflare.com.
   - lakas.ns.cloudflare.com.
 - ns:
   - cheryl.ns.cloudflare.com.
