! Watch Cloudflare NS pair Dolly+Igor

--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -419,6 +419,9 @@ items:
   - hans.ns.cloudflare.com.
 - ns:
   - dolly.ns.cloudflare.com.
+  - igor.ns.cloudflare.com.
+- ns:
+  - dolly.ns.cloudflare.com.
   - logan.ns.cloudflare.com.
 - ns:
   - dom.ns.cloudflare.com.
