! Watch Cloudflare NS pair Eoin+Joselyn
Joselyn with an S; there is also Jocelyn (!)

--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -471,6 +471,9 @@ items:
   - elsa.ns.cloudflare.com.
   - theo.ns.cloudflare.com.
 - ns:
+  - eoin.ns.cloudflare.com.
+  - joselyn.ns.cloudflare.com.
+- ns:
   - eric.ns.cloudflare.com.
   - michelle.ns.cloudflare.com.
 - ns:
