! Watch Domaincontrol NS pair ns45+ns46

--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -915,6 +915,9 @@ items:
   ns:
   - ns43.domaincontrol.com.
   - ns44.domaincontrol.com.
+- ns:
+  - ns45.domaincontrol.com.
+  - ns46.domaincontrol.com.
 - comment: FPs, don't blacklist
   ns:
   - ns57.domaincontrol.com.
