! Watch Cloudflare NS pair Ben+Chloe

--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -194,6 +194,9 @@ items:
   - duke.ns.cloudflare.com.
 - ns:
   - ben.ns.cloudflare.com.
+  - chloe.ns.cloudflare.com.
+- ns:
+  - ben.ns.cloudflare.com.
   - kami.ns.cloudflare.com.
 - ns:
   - beth.ns.cloudflare.com.
