--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -259,6 +259,9 @@ items:
   - brian.ns.cloudflare.com.
   - dalary.ns.cloudflare.com.
 - ns:
+  - brianna.ns.cloudflare.com.
+  - walt.ns.cloudflare.com.
+- ns:
   - bruce.ns.cloudflare.com.
   - chan.ns.cloudflare.com.
 - ns:
