--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -1007,6 +1007,7 @@ items:
 - ns: servconfig.com.
 - comment: unlike siteground.asia, this gets significant FPs, but also some weight 1; see also subdomains
   ns: siteground.biz.
+- ns: giow1065.siteground.us.
 - ns: m76.siteground.biz.
 - ns: cetpainfotech.com.
 - comment: no longer responding 2020-04-02
