! Watch OVH.ca NSD pair vps284337.vps + sdns2
wordpresserror500.com

--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -1267,3 +1267,6 @@ items:
 - ns: hostingsrv.xyz.
 - ns: hostingviet.vn.
 - ns: dnsireland.com.
+- ns:
+  - sdns2.ovh.ca.
+  - vps284337.vps.ovh.ca.
