--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -660,6 +660,9 @@ items:
   - jim.ns.cloudflare.com.
   - nadia.ns.cloudflare.com.
 - ns:
+  - jo.ns.cloudflare.com.
+  - rob.ns.cloudflare.com.
+- ns:
   - jocelyn.ns.cloudflare.com.
   - seth.ns.cloudflare.com.
 - ns:
