--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -1218,6 +1218,7 @@ items:
 - ns: cp-in-12.webhostbox.net.
 - ns: md-31.webhostbox.net.
 - ns: md-63.webhostbox.net.
+- ns: md-89.webhostbox.net.
 - ns: md-in-20.webhostbox.net.
 - ns: md-in-51.webhostbox.net.
 - ns: md-in-57.webhostbox.net.
