! Watch Domaincontrol NS pair ns15+ns16

--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -927,6 +927,9 @@ items:
   - ns09.domaincontrol.com.
   - ns10.domaincontrol.com.
 - ns:
+  - ns15.domaincontrol.com.
+  - ns16.domaincontrol.com.
+- ns:
   - ns27.domaincontrol.com.
   - ns28.domaincontrol.com.
 - ns:
