! Watch webhostbox.net NS cp-32

--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -1221,6 +1221,7 @@ items:
 - ns: bh-in-10.webhostbox.net.
 - ns: bh-in-31.webhostbox.net.
 - ns: bh-in-33.webhostbox.net.
+- ns: cp-32.webhostbox.net.
 - ns: cp-in-12.webhostbox.net.
 - ns: md-31.webhostbox.net.
 - ns: md-63.webhostbox.net.
