--- a/watched_nses.yml
+++ b/watched_nses.yml
@@ -1238,7 +1238,9 @@ items:
 - ns: exweme.com.
 - ns: ifcondition.com.
 - ns: c13707.sgvps.net.
-- ns: guruapk.com.
+- comment: no longer resolves 2020-08-27
+  disable: true
+  ns: guruapk.com.
 - ns: netafraz.com.
 - ns: tidalworld.com.
 - ns: hostcloudstore.com.
